update progress bar

--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
 <html>
   <head>
     <title>InnoVoter</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style.css">
   </head>
   <body>
     <div id="presence">
       <div id="amount">1,578,762</div>
-      <div id="progressBar">
-          <div class="bar"></div>
+      <div id="percentage">47.3%</div>
+      <div id="graph">
+        <div class="progress">
+          <div class="progress-bar">
+          </div>
         </div>
+        <ul id="hours">
+            <li id="begin-hour">7:00</li>
+            <li class="space"></li>
+            <!-- <li>8:00</li>
+            <li>9:00</li>
+            <li>10:00</li>
+            <li>11:00</li>
+            <li>12:00</li>
+            <li>13:00</li>
+            <li>14:00</li>
+            <li>15:00</li>
+            <li>16:00</li>
+            <li>17:00</li>
+            <li>18:00</li>
+            <li>19:00</li>
+            <li>20:00</li> -->
+            <li id="end-hour">21:00</li>
+          </ul>
+      </div>
+      
     </div>
   </body>
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="assets/scripts.js"></script>
 </html>
