--- a/index.html
+++ b/index.html
@@ -9,31 +9,19 @@
       <div id="amount">1,578,762</div>
       <div id="percentage">47.3%</div>
       <div id="graph">
-        <canvas id="myChart" width="400" height="400"></canvas>
+        <div id="chart" class="close-chart">
+          <canvas id="myChart" width="400" height="400"></canvas>
+        </div>
+        <ul id="hours">
+            <li>7:00</li>
+            <li class="space"></li>
+            <li>21:00</li>
+        </ul>
         <div class="progress">
           <div class="progress-bar">
           </div>
         </div>
-        <ul id="hours">
-            <li id="begin-hour">7:00</li>
-            <li class="space"></li>
-            <!-- <li>8:00</li>
-            <li>9:00</li>
-            <li>10:00</li>
-            <li>11:00</li>
-            <li>12:00</li>
-            <li>13:00</li>
-            <li>14:00</li>
-            <li>15:00</li>
-            <li>16:00</li>
-            <li>17:00</li>
-            <li>18:00</li>
-            <li>19:00</li>
-            <li>20:00</li> -->
-            <li id="end-hour">21:00</li>
-          </ul>
-          <div id="dropdown">
-            </div>
+        <div id="dropdown"></div>
       </div>
       
     </div>
